assets/blocks.editor.css
pre.wp-block-code {
	color: #f8f8f2;
	background: #282c34;
	font-family: Hack, 'Fira Code', Consolas, Menlo, Monaco, 'Andale Mono',
		'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono',
		'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L',
		'Courier New', Courier, monospace;
	padding: 1em;
	margin: 0.5em auto;
	overflow: auto;
	border-radius: 0.3em;
}

pre.wp-block-code code {
	color: #f8f8f2;
	padding-left: 0;
	border: none;
	overflow-x: initial;
}

.mkaz-code-syntax-block__labels {
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
		Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
	font-size: 0.85rem;
	margin-top: 1rem;
	/* label is above text area so we want to bring closer */
	margin-bottom: -1rem !important;
	text-align: right;
}

.mkaz-code-syntax-block__labels span {
	padding: 8px;
	margin: 0 8px;
	color: #333;
	background-color: #eee;
}

